hphp/test/zend/good/Zend/tests/bug43450.php.skipif
<?php if (!function_exists('memory_get_usage')) die('memory_get_usage() not installed'); ?>