hphp/test/zend/bad/ext/standard/tests/serialize/005.php.skipif
<?php if (!interface_exists('Serializable')) die('skip Interface Serialzable not defined'); ?>